# der-markt

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  deploy  index.html  package.json  session.vim  vite.config.js
backend/: Cargo.toml  build_import.sh  watch_server.sh
backend/src/: import_main.rs  server_main.rs
config/env/: base-config.js  development-config.json  production-config.js
datasources/: top-zinsen.json
docs/: CNAME  index-b449daad92e27d4f4287384a86bb533f.js  index-b449daad92e27d4f4287384a86bb533f.js.br  index.html  index.html.br  index.js.map  robots.txt  sitemap.xml  sitemap.xml.br
docs/css/: index-1a4eb277825721f94583fb7a26a7bdfa.css  index-1a4eb277825721f94583fb7a26a7bdfa.css.br  index-41eeea18e3d8c45361b315662db5c6ae.css  index-41eeea18e3d8c45361b315662db5c6ae.css.br  index-56d4b591ed7219bb79057def80f4548a.css.br  index-5d148d0706ab237a89626c0085cc5fe9.css  index-5d148d0706ab237a89626c0085cc5fe9.css.br  index-a52f74e5243c418e874bd06ab81bd452.css.br  index-cea300ec875cf4f0731281d128186377.css  index-cea300ec875cf4f0731281d128186377.css.br  index-f74e7fe1922fd38bdb35f40f263b45aa.css  index-f74e7fe1922fd38bdb35f40f263b45aa.css.br  index.css  index.css.map
docs/images/: favicon-5efd4dc4c28ef3548aec63ae88865ff9.png.br
docs/templates/: bausparen.html  (+9 more)
frontend/: package.json
lib/: app-teaser-defs.js  build-sitemap.js
sh/: deploy
site/: index.hbshelpers.js  index.layout.handlebars  index.menu.json  index.template.hbs  robots.txt
src/: App.jsx  CookieWatch.jsx  CookieWatch.module.css  cookie-watch.css  cookie-watch.jsx
(+10 files in other folders)
