[package]
name = "backend"
version = "0.1.0"
authors = ["Michael Kastner <kastner@galt.de>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "src/server_main.rs"
[[bin]]
name = "import"
path = "src/import_main.rs"
[profile.dev]
opt-level=0
[profile.release]
# opt-level=3
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
[dependencies]
actix-web = "3"
futures = "0.3"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2", features = ["full"] }
